ETSL-470 Footer Alignment issues and ETSL-719 Top nav alignment issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/mega-navigation.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/mega-navigation.scss
@@ -1577,6 +1577,12 @@
     justify-content: center;
 }
 
+.meganavigation .main-menu-slide svg.nav-link-icon {
+    @include respond-to-max($tablet){
+        width: auto;
+    }
+}
+
 .main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li.icon-link::before {
     content: '';
     width: 1px;
